--- a/public/style.css
+++ b/public/style.css
@@ -7,7 +7,7 @@ body {
 }
 .page-action-cont {
     height: 3rem;
-    background-color: #218c74;
+    background-color: #562b4f;
     display: flex;
     align-items: flex-end;
     padding-left: 1rem;
@@ -23,7 +23,7 @@ body {
 }
 .selected-page-action {
     background-color: #f1f2f6;
-    color: #218c74;
+    color: #562b4f;
 }
 .cellprop-action-cont {
     height: 3rem;
@@ -130,7 +130,7 @@ body {
 .top-left-dummy-box {
     height: 2rem;
     width: 2rem;
-    background-color: #747d8c;
+    background-color: #b888c4;
     position: fixed;
     z-index: 5;
 }
@@ -188,3 +188,46 @@ body {
     height: 100%;
     width: 100%;
 }
+.modal {
+    display: none; 
+    position: fixed;
+    z-index: 1000; 
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Overlay background */
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .modal-content {
+    background-color: white;
+    padding: 20px;
+    border-radius: 8px;
+    width: 300px;
+    text-align: center;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+  }
+  
+  .close {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    font-size: 18px;
+    cursor: pointer;
+  }
+  
+  button {
+    padding: 10px 20px;
+    background-color: #5a1b59;
+    color: white;
+    border: none;
+    border-radius: 2px;
+    cursor: pointer;
+  }
+  
+  button:hover {
+    background-color: #88208f;
+  }
+  
